# PersoProjects

./: .gitignore  .gitmodules  README.md
ros2-control-simulations/: ros2_pid_turtlesim_complet.ipynb
ros2-control-simulations/.ipynb_checkpoints/: ros2_pid_turtlesim-checkpoint.ipynb  ros2_pid_turtlesim_complet-checkpoint.ipynb
ros2-control-simulations/ros2_ws/config/: trajectory_params.yaml
ros2-control-simulations/ros2_ws/launch/: analysis.launch.py  pid_control.launch.py
ros2-control-simulations/ros2_ws/src/ros2_pid_turtle/: package.xml  setup.cfg  setup.py
ros2-control-simulations/ros2_ws/src/ros2_pid_turtle/ros2_pid_turtle/: bicycle_model.py  control_node.py  pid_controller.py  trajectory_generator.py
